# godot-docs-linters

./: README.md  doc_generation_linter.py  enum_linter.py  pyproject.toml
z_linters/: better_method_name_linter.py  enum_linter.py  method_name_linter.py
